# ailab-db

./: .editorconfig  .env.template  .gitignore  2023-09-20-issue1-seed-identification-api-for-nachet-frontend.py  2023-10-06-all-json-dictionary.py  DB.md  DEVELOPER.md  Dockerfile  README.md  all-json-dictionary.py  backup-db-docker.sh  backup-db.sh  benchmark_results.json  blob_add_crawls.py  blob_delete.py  combine-iis-logs.sh  docker-entrypoint.sh  finesse-weights.json  generate-qna-script.md  issue1-seed-identification-api-for-nachet-frontend.py  lib.sh  pyproject.toml  requirements.txt  restore-db-docker.sh  search-scores-and-weights.md  search.py  setup-procedure  setup-procedure.md  update-schema-louis.sh  weights.json
.devcontainer/: devcontainer.json
benchmarking/: search_results.json
bytebase/: fsdh##20240402181208##ddl##test_schema_2.sql
louis/: 2023-09-20-issue1-seed-identification-api-for-nachet-frontend.py  test.json
postgres/: Dockerfile  build-louis-postgres.sh
sql/: 2023-06-01-inspectioncanadaca.pgdump_schema.sql  2023-06-01-inspectioncanadaca.pgdump_schema.sql.public_new.sql  2023-07-07-cleanup-orphans.sql  2023-07-11-hotfix-xml-not-well-formed.sql  2023-07-11-populate-link.sql  2023-07-11-validate-xml-well-formed.sql  2023-07-12-calculate-incoming-outgoing-counts.sql  2023-07-12-score-current.sql  2023-07-17-create-intern.sql  2023-07-19-modified-documents.sql  2023-07-19-modify-score_type-add-similarity.sql  2023-07-19-weighted_search.sql  2023-07-21-default_chunk.sql  2023-07-24-comment-score_type.sql  2023-07-27-weed-seed-extraction.sql  2023-07-31-delete-test-title-entry.sql  2023-08-08-count-crawl-with-missing-chunk.sql  2023-08-09-find-duplicated_html_content.sql  2023-08-09-issue8-html_content-table.sql  2023-09-04-add-missing-constraints-rename-column.sql  2023-09-20-issue1-seed-identification-api-for-nachet-frontend.sql  2023-11-02-individual-scoring-view.sql  2023-11-21-clone-schema.sql  2023-11-23-create-chunk-score-table.sql  2023-11-23-fill-chunk-score-table.sql  2023-11-28-chunk-didactic-score.sql  2023-11-28-create-histogram.sql  2023-11-28-print-schema-table.sql  2023-11-29-rename-schema.sql  2023-11-30-tr-count.sql  2023-12-11-score-by-element.sql  2023-12-12-create-tabletest.sql  2024-03-20-html_content_to_chunk_chunk_id_idx.sql  2024-03-20-md5hash-to-uuid-with-indexes.sql  2024-03-20-weighted-search-updated.sql  ToDelete.json  clone_schema.sql  compute-traffic-score.sql  convert_louis_v000_to_louis_v002.sql  copy_table.sql  (+15 more)
tests/: fetch_embedding.py  test_db.py  test_db_api.py  test_db_crawler.py  test_db_data.py  (+7 more)
(+39 files in other folders)
